--- a/aboutme.html
+++ b/aboutme.html
@@ -9,81 +9,80 @@
 </head>
 
 <body>
-    <header id="headergrid">
-
-        <a href="index.html"><img id="logo" src="images/B-logo.png"></a>
-
-        <div id="navmenu">
-            <ul class="rightalignnavigation">
-                <a href="/aboutme.html">
-                    <li class="menuitems">About</li>
-                </a>
-                <a href="/skills.html">
-                    <li class="menuitems">Skills</li>
-                </a>
-                <a href="mywork.html">
-                    <li class="menuitems">Work</li>
-                </a>
-                <a href="/contact.html">
-                    <li class="menuitems">Contact</li>
-                </a>
-            </ul>
-        </div>
-    </header>
+    <div class="container">
+        <header id="headergrid">
+            <a href="index.html"><img id="logo" src="images/B-logo.png"></a>
+            <div id="navmenu">
+                <ul class="rightalignnavigation">
+                    <a href="/aboutme.html">
+                        <li class="menuitems">About</li>
+                    </a>
+                    <a href="/skills.html">
+                        <li class="menuitems">Skills</li>
+                    </a>
+                    <a href="mywork.html">
+                        <li class="menuitems">Work</li>
+                    </a>
+                    <a href="/contact.html">
+                        <li class="menuitems">Contact</li>
+                    </a>
+                </ul>
+            </div>
+        </header>
+    </div>
 
     <div class="jumbotron jumbotron-fluid hp-hero">
         <div class="container hero-container">
             <h1 class="h1-homebio">ABOUT ME</h1>
             <div class="row">
-                <div class="col-lg-4">
+                <div class="col">
                     <img class="profileimage img-fluid" src="images/bea-google-cropped.jpg">
                 </div>
-                <div class="col-lg-8 bio-bg">
+                <div class="col">
                     <h2>A Citizen of the world!</h2>
                     <p class="shortbio">
-                        Born in Dominican Republic, raised in Puerto Rico, living in Chicago- I am fluent in Spanish and English. I love visiting other countries and learning their cultures. I am a formally trained accountant with a passion for beautiful and functional design.
+                        Born in Dominican Republic, raised in Puerto Rico, living in Chicago- I am fluent in Spanish and English. I love visiting other countries and learning their cultures. I am a formally trained accountant with a passion for beautiful, functional and purposeful design.
                     </p>
-                    <h2 class="h2-resume">Take a look at My Resume!</h2>
                     <button class="primary-button">MY RESUME</button>
 
 
                 </div>
 
+
             </div>
         </div>
     </div>
 
-
-    <footer id="footergrid">
-
-        <div id="footernavmenu">
-
-            <ul>
-                <a href="/aboutme.html">
-                    <li class="footermenuitems">About</li>
-                </a>
-                <a href="/skills.html">
-                    <li class="footermenuitems">Skills</li>
-                </a>
-                <a href="mywork.html">
-                    <li class="footermenuitems">Work</li>
-                </a>
-                <a href="/contact.html">
-                    <li class="footermenuitems">Contact</li>
-                </a>
-            </ul>
+    <div class="container">
+        <div class="row">
+            
         </div>
-        <div id="socialicons">
-            <ul>
-                <li class="socialitems">
-                    <h6 class="h6connect">EMAIL: BEAHARNOIS@ME.COM</h6>
-                </li>
-                <li class="socialitems"><img src="images/fb-dark.png"></li>
-                <li class="socialitems"><img src="images/insta-dark.png"></li>
-                <li class="socialitems"><img src="images/LinkedIn-dark.png"></li>
-            </ul>
-        </div>
-    </footer>
+
+    </div>
+
+
+    <div class="container">
+        <nav class="navbar justify-content-end">
+          <a class="navbar" href="#">
+            <img src="images/Top.png" alt="">
+          </a>
+        </nav>
+        <nav class="navbar">
+          <nav class="navbar-brand">
+            <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">About</a>
+            <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Skills</a>
+            <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Work</a>
+            <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Contact</a>
+          </nav>
+          <nav class="navbar justify-content-end">
+            <h6 class="h6connect">EMAIL: BEAHARNOIS@ME.COM</h6>
+            <a class="nav-link" href="#"><img src="images/fb.png"></a>
+            <a class="nav-link" href="#"><img src="images/insta.png"></a>
+            <a class="nav-link" href="#"><img src="images/LinkedIn.png"></a>
+          </nav>
+        </nav>
+      </div>
+
 
     <script src="js/index.js"></script>
 </body>
