--- a/contact.html
+++ b/contact.html
@@ -8,20 +8,28 @@
 </head>
 
 <body>
-<header id="headergrid">
-
- <a href="index.html"><img id="logo" src="images/B-logo.png"></a> 
-
+  <div class="container">
+    <header id="headergrid">
+        <a href="index.html"><img id="logo" src="images/B-logo.png"></a>
         <div id="navmenu">
             <ul class="rightalignnavigation">
-                <a href="/aboutme.html"><li class="menuitems">About</li></a>
-                <a href="/skills.html"><li class="menuitems">Skills</li></a>
-                <a href="mywork.html"><li class="menuitems">Work</li></a>
-                <a href="/contact.html"><li class="menuitems">Contact</li></a>
+                <a href="/aboutme.html">
+                    <li class="menuitems">About</li>
+                </a>
+                <a href="/skills.html">
+                    <li class="menuitems">Skills</li>
+                </a>
+                <a href="mywork.html">
+                    <li class="menuitems">Work</li>
+                </a>
+                <a href="/contact.html">
+                    <li class="menuitems">Contact</li>
+                </a>
             </ul>
         </div>
     </header>
-<div class="container">
+</div>
+<div class="container  top-con">
     <h1>Contact Bea</h1>
       <form class="row g-3 contact-bea">
         <div class="col-md-6">
@@ -60,29 +68,27 @@
       </form>
 </div>
 
-    <footer id="footergrid">
-
-        <div id="footernavmenu">
-            
-            <ul>
-                <a href="/aboutme.html"><li class="footermenuitems">About</li></a>
-                <a href="/skills.html"><li class="footermenuitems">Skills</li></a>
-                <a href="mywork.html"><li class="footermenuitems">Work</li></a>
-                <a href="/contact.html"><li class="footermenuitems">Contact</li></a>
-            </ul>
-        </div>
-        <div id="socialicons">
-          
-                    <ul>
-                      <li class="socialitems">
-                        <h6 class="h6connect">EMAIL: BEAHARNOIS@ME.COM</h6></li>
-                      <li class="socialitems"><img src="images/fb-dark.png"></li>
-                      <li class="socialitems"><img src="images/insta-dark.png"></li>
-                      <li class="socialitems"><img src="images/LinkedIn-dark.png"></li>
-                  </ul>
-        </div>
-    </footer>
-
+<div class="container">
+  <nav class="navbar justify-content-end">
+    <a class="navbar" href="#">
+      <img src="images/Top.png" alt="">
+    </a>
+  </nav>
+  <nav class="navbar">
+    <nav class="navbar-brand">
+      <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">About</a>
+      <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Skills</a>
+      <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Work</a>
+      <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Contact</a>
+    </nav>
+    <nav class="navbar justify-content-end">
+      <h6 class="h6connect">EMAIL: BEAHARNOIS@ME.COM</h6>
+      <a class="nav-link" href="#"><img src="images/fb.png"></a>
+      <a class="nav-link" href="#"><img src="images/insta.png"></a>
+      <a class="nav-link" href="#"><img src="images/LinkedIn.png"></a>
+    </nav>
+  </nav>
+</div>
     <script src="js/index.js"></script>
 </body>
 
