--- a/mywork.html
+++ b/mywork.html
@@ -8,20 +8,27 @@
 </head>
 
 <body>
-    <header id="headergrid">
-        <a href="index.html"><img id="logo" src="images/B-logo.png"></a> 
-
-        <div id="navmenu">
-            <ul class="rightalignnavigation">
-                <a href="/aboutme.html"><li class="menuitems">About</li></a>
-                <a href="/skills.html"><li class="menuitems">Skills</li></a>
-                <a href="mywork.html"><li class="menuitems">Work</li></a>
-                <a href="/contact.html"><li class="menuitems">Contact</li></a>
-            </ul>
-        </div>
-    </header>
-
-
+    <div class="container">
+        <header id="headergrid">
+            <a href="index.html"><img id="logo" src="images/B-logo.png"></a>
+            <div id="navmenu">
+                <ul class="rightalignnavigation">
+                    <a href="/aboutme.html">
+                        <li class="menuitems">About</li>
+                    </a>
+                    <a href="/skills.html">
+                        <li class="menuitems">Skills</li>
+                    </a>
+                    <a href="mywork.html">
+                        <li class="menuitems">Work</li>
+                    </a>
+                    <a href="/contact.html">
+                        <li class="menuitems">Contact</li>
+                    </a>
+                </ul>
+            </div>
+        </header>
+    </div>
         <div class="container">
             <h1>MY CASE STUDIES</h1>
 
