--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <div class="card-body">
                       <h3 class="card-title">What the Puck!</h3>
                       <p class="card-text">Expanding the website contect to encourage new members to sign up and provide a one-stop-shop with the resources and information that existing members need.</p>
-                      <a href="#" class="secondary-button">Learn More</a>
+                      <a href="uwh.html" class="secondary-button">Learn More</a>
                     </div>
                   </div>
             </div>
