about and cpr cs

--- a/aboutme.html
+++ b/aboutme.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <header id="headergrid">
-            <a href="index.html"><img id="logo" src="images/B-logo.png"></a>
+            <a href="index.html"><img id="logo" src="images/bold round logo color.png"></a>
             <div id="navmenu">
                 <ul class="rightalignnavigation">
                     <a href="/aboutme.html">
@@ -30,7 +30,6 @@
             </div>
         </header>
     </div>
-
     <div class="jumbotron jumbotron-fluid hp-hero">
         <div class="container hero-container">
             <h1 class="h1-homebio">ABOUT ME</h1>
@@ -54,9 +53,20 @@
     </div>
 
     <div class="container">
-        <div class="row">
-            
-        </div>
+        <h1>MY FAVES!</h1>
+        <img class="p-bar" src="images/gray-bar.png">
+        <H4>My daughter, dogs, matcha, yoga, nature, travelling the world, and doing Kareoke once in a while.
+        </H4>
+        <div class="row top-con">
+            <div class="col-4"><img class="about-img-1" src="images/small-isa-mama.jpg"></div>
+            <div class="col-4"><img class="about-img-2" src="images/matcha-wb.jpg"></div>
+            <div class="col-4"><img class="about-img-3" src="images/small-yoga-bw.jpg"></div>
+          </div>
+          <div class="row">
+            <div class="col-4"><img class="about-img-4" src="images/air-bw.jpg"></div>
+            <div class="col-4"><img class="about-img-5" src="images/puppies-bw.jpg"></div>
+            <div class="col-4"><img class="about-img-6" src="images/m-p-bw.jpg"></div>
+          </div>
 
     </div>
 
