--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <header id="headergrid">
-            <a href="index.html"><img id="logo" src="images/B-logo.png"></a>
+            <a href="index.html"><img id="logo" src="images/bold round logo color.png"></a>
             <div id="navmenu">
                 <ul class="rightalignnavigation">
                     <a href="/aboutme.html">
@@ -52,13 +52,13 @@
         </div>
     </div>
 
-    <div class="container-fluid case">
+    <div class="container-fluid">
        <div class="container"> 
         <h1 class="h1-case">Case Studies</h1>
-        <img src="images/gray-bar.png">
+        <img class="p-bar" src="images/gray-bar.png">
        </div>
     </div>
-    <div class="container">
+    <div class="container top-con">
         <div class="row">
             <div class="col-lg-6">
                 <div class="card" style="width: 30em;">
@@ -114,19 +114,20 @@
 
     <div class="container">
         <nav class="navbar justify-content-end">
-          <a class="navbar" href="#">
+          <a class="navbar" href="index.html">
             <img src="images/Top.png" alt="">
           </a>
         </nav>
         <nav class="navbar">
           <nav class="navbar-brand">
+          <a class="navbar-brand" href=""><img id="logo" src="images/bold round logo bw.png"></a>
             <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">About</a>
             <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Skills</a>
             <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Work</a>
             <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Contact</a>
           </nav>
           <nav class="navbar justify-content-end">
-            <h6 class="h6connect">EMAIL: BEAHARNOIS@ME.COM</h6>
+            <h6 class="h6connect">BEAHARNOIS@ME.COM</h6>
             <a class="nav-link" href="#"><img src="images/fb.png"></a>
             <a class="nav-link" href="#"><img src="images/insta.png"></a>
             <a class="nav-link" href="#"><img src="images/LinkedIn.png"></a>
