--- a/uwh.html
+++ b/uwh.html
@@ -12,7 +12,7 @@
 <body>
   <div class="container">
     <header id="headergrid">
-        <a href="index.html"><img id="logo" src="images/B-logo.png"></a>
+        <a href="index.html"><img id="logo" src="images/bold round logo color.png"></a>
         <div id="navmenu">
             <ul class="rightalignnavigation">
                 <a href="/aboutme.html">
