--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
     <div class="jumbotron jumbotron-fluid hp-hero">
         <div class="container hero-container">
             <h4>Hi, I'm Bea Harnois-</h4>
-            <h1 class="h1-homebio">An UX/UI practicioner inspired by user-centered design. </h1>
+            <h1 class="h1-homebio">An UX/UI practitioner inspired by user-centered design. </h1>
             <div class="row">
                 <div class="col-lg-4">
                     <img class="profileimage img-fluid" src="images/bea-harnois-round-profile.png">
                 </div>
                 <div class="col-lg-8 bio-bg">
                     <p class="shortbio">
-                        Driven by human needs, I collaborate with teams to make evidence-based and research-informed design decisions that solve complex business problems and deliver intuitive solutions with engaging user experiences.
+                        Driven by human needs, I collaborate with teams to make evidence-based and research-informed design decisions that target complex usability problems and deliver intuitive solutions with engaging user experiences.
                     </p>
                     <h2 class="h2-resume">Take a look at My Resume!</h2>
                     <button class="primary-button">MY RESUME</button>
