--- a/uwh.html
+++ b/uwh.html
@@ -552,27 +552,30 @@
   <!--Footer-->
   <div class="container">
     <nav class="navbar justify-content-end">
-      <a class="navbar" href="#">
+      <a class="navbar" href="index.html">
         <img src="images/Top.png" alt="">
       </a>
     </nav>
     <nav class="navbar">
       <nav class="navbar-brand">
+      <a class="navbar-brand" href=""><img id="logo" src="images/bold round logo bw.png"></a>
         <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">About</a>
         <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Skills</a>
         <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Work</a>
         <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Contact</a>
       </nav>
       <nav class="navbar justify-content-end">
+        <h6 class="h6connect">BEAHARNOIS@ME.COM</h6>
         <a class="nav-link" href="#"><img src="images/fb.png"></a>
         <a class="nav-link" href="#"><img src="images/insta.png"></a>
         <a class="nav-link" href="#"><img src="images/LinkedIn.png"></a>
       </nav>
     </nav>
   </div>
-  </div>
-
-  <script src="js/index.js"></script>
-</body>
-
-</html>
+  
+   
+  
+    <script src="js/index.js"></script>
+  </body>
+  
+  </html>
