--- a/contact.html
+++ b/contact.html
@@ -62,34 +62,44 @@
           <input type="text" class="form-control" id="inputZip" placeholder="Zip">
         </div>
     </br>
+
+    <div class="col-12">
+      <label for="exampleFormControlTextarea1" class="form-label">Question or Comment</label>
+      <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+    </div>
         <div class="col-12">
           <button class="secondary-button">SEND</button>
         </div>
       </form>
 </div>
 
+
 <div class="container">
   <nav class="navbar justify-content-end">
-    <a class="navbar" href="#">
+    <a class="navbar" href="index.html">
       <img src="images/Top.png" alt="">
     </a>
   </nav>
   <nav class="navbar">
     <nav class="navbar-brand">
+    <a class="navbar-brand" href=""><img id="logo" src="images/bold round logo bw.png"></a>
       <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">About</a>
       <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Skills</a>
       <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Work</a>
       <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Contact</a>
     </nav>
     <nav class="navbar justify-content-end">
-      <h6 class="h6connect">EMAIL: BEAHARNOIS@ME.COM</h6>
+      <h6 class="h6connect">BEAHARNOIS@ME.COM</h6>
       <a class="nav-link" href="#"><img src="images/fb.png"></a>
       <a class="nav-link" href="#"><img src="images/insta.png"></a>
       <a class="nav-link" href="#"><img src="images/LinkedIn.png"></a>
     </nav>
   </nav>
 </div>
-    <script src="js/index.js"></script>
+
+ 
+
+  <script src="js/index.js"></script>
 </body>
 
 </html>
