--- a/cpr-redesign.html
+++ b/cpr-redesign.html
@@ -2,7 +2,8 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <link rel="stylesheet" href="css.html/style.css">
 </head>
@@ -30,17 +31,79 @@
         </header>
     </div>
 
-    <div class="jumbotron jumbotron-fluid hp-hero">
-        <div class="container hero-container">
-            <h1 class="h1-homebio">Chicago Pet Rescue Website Redesign</h1>
-            <div class="row">
-                <div class="col-lg-8">
-            <p>Chicago Pet Rescue is a non-profit, foster home and volunteer-based rescue, dedicated to rescuing stray and abandoned animals. Their goal is to rescue as many animals as they can safely manage through foster homes. They rescue dogs, puppies, cats, kittens, birds and other small animals.</p>
+    <div class="container hero-container">
+        <h1 class="h1-homebio">Chicago Pet Rescue Website Redesign</h1>
+        <div class="row">
+            <div class="col-lg-8">
+                <p>Chicago Pet Rescue is a non-profit, foster home and volunteer-based rescue, dedicated to rescuing
+                    stray and abandoned animals. Their goal is to rescue as many animals as they can safely manage
+                    through foster homes. They rescue dogs, puppies, cats, kittens, birds and other small animals.
+                </p>
+            </div>
         </div>
+        <div class="row">
+            <div class="col-lg-12">
+                <img class="" src="images/cpr/hero-cpr-redesign.png">
+            </div>
         </div>
-             <img class="profileimage img-fluid" src="images/">
-            
+    </div>
+
+
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-3">
+                <h4>TIMELINE</h4>
+                <p>3 Weeks</p>
+            </div>
+            <div class="col-lg-3">
+                <h4>MY ROLE</h4>
+                <p>Research, UX/UI Design, Code</p>
+            </div>
+            <div class="col-lg-3">
+                <h4>TEAM</h4>
+                <p>Ashlie, Bea, Valerie</p>
+            </div>
+            <div class="col-lg-3">
+                <h4>TOOLS</h4>
+                <p>Figma, Figjam, InVision, GitHub, Visual Studio Code, Gantt Chart, Canva, PhotoShop, Google Docs, Zoom
+                </p>
+            </div>
         </div>
+
+    </div>
+
+    <div class="container center-p">
+        <h4>OVERVIEW</h4>
+        <p>With so many animals in need of care and resources, and people looking for company and connection, often
+            animal lovers feel more motivated to adopt a pet instead of purchasing one. When navigating a pet rescue
+            webiste, in order to feel motivated to engage in the adoption process, the user needs to have trust in the
+            organization and feel comfortable and satisfied with the amount of information they find. We identified a
+            gap between what the visitors of the site expected and what the webiste provided. We were able to rethink
+            ways to help the organization’s website serve a bigger purpose and for pet lovers to give back in a manner
+            that provides value to all parties involved.</p>
+
+        <h4>THE PROBLEM</h4>
+        <p>The Chicago Pet Rescue webiste was cluttered and in need of updating. The site needed to focus on adoption as
+            their main goal and encourage more foot traffic.</p>
+        <img class="old" src="images/cpr/old-web-design.png">
+    </div>
+
+
+    <div class="container-fluid div-bar">
+        <div class="container center-p">
+            <h4>DESIGN CHALLENGE</h4>
+            <p>
+                How might we create an experience that provides the right amount of information to answer the user’s
+                questions, builds trust, reduces abandonement, and encourages the completion of the pet adoption
+                process?
+            </p>
+        </div>
+
+    </div>
+
+    <div class="container center-p">
+        <h4>THE SOLUTION</h4>
+        <p>To create a streamlined and visually appealing site that clearly explains the adoption process and is easier to navigate. Apply modern UI elements, simplify the application form, and re-organize the navigation to enhance the usability and aesthetics of the Chicago Pet Rescue website while maintaining most of the original site composition and content integrity. </p>
     </div>
 
 
@@ -48,30 +111,30 @@
 
     <div class="container">
         <nav class="navbar justify-content-end">
-          <a class="navbar" href="index.html">
-            <img src="images/Top.png" alt="">
-          </a>
+            <a class="navbar" href="index.html">
+                <img src="images/Top.png" alt="">
+            </a>
         </nav>
         <nav class="navbar">
-          <nav class="navbar-brand">
-          <a class="navbar-brand" href=""><img id="logo" src="images/bold round logo bw.png"></a>
-            <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">About</a>
-            <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Skills</a>
-            <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Work</a>
-            <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Contact</a>
-          </nav>
-          <nav class="navbar justify-content-end">
-            <h6 class="h6connect">BEAHARNOIS@ME.COM</h6>
-            <a class="nav-link" href="#"><img src="images/fb.png"></a>
-            <a class="nav-link" href="#"><img src="images/insta.png"></a>
-            <a class="nav-link" href="#"><img src="images/LinkedIn.png"></a>
-          </nav>
+            <nav class="navbar-brand">
+                <a class="navbar-brand" href=""><img id="logo" src="images/bold round logo bw.png"></a>
+                <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">About</a>
+                <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Skills</a>
+                <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Work</a>
+                <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Contact</a>
+            </nav>
+            <nav class="navbar justify-content-end">
+                <h6 class="h6connect">BEAHARNOIS@ME.COM</h6>
+                <a class="nav-link" href="#"><img src="images/fb.png"></a>
+                <a class="nav-link" href="#"><img src="images/insta.png"></a>
+                <a class="nav-link" href="#"><img src="images/LinkedIn.png"></a>
+            </nav>
         </nav>
-      </div>
+    </div>
 
-       
 
-        <script src="js/index.js"></script>
+
+    <script src="js/index.js"></script>
 </body>
 
 </html>
