--- a/cpr-redesign.html
+++ b/cpr-redesign.html
@@ -65,7 +65,7 @@
             </div>
             <div class="col-lg-3">
                 <h4>TOOLS</h4>
-                <p>Figma, Figjam, InVision, GitHub, Visual Studio Code, Gantt Chart, Canva, PhotoShop, Google Docs, Zoom
+                <p>Figma, Figjam, InVision, GitHub, VS Code, Gantt Chart, Canva, PhotoShop, Google Docs, Zoom
                 </p>
             </div>
         </div>
@@ -103,10 +103,27 @@
 
     <div class="container center-p">
         <h4>THE SOLUTION</h4>
-        <p>To create a streamlined and visually appealing site that clearly explains the adoption process and is easier to navigate. Apply modern UI elements, simplify the application form, and re-organize the navigation to enhance the usability and aesthetics of the Chicago Pet Rescue website while maintaining most of the original site composition and content integrity. </p>
+        <p>To create a streamlined and visually appealing site that clearly explains the adoption process and is easier
+            to navigate. Apply modern UI elements, simplify the application form, and re-organize the navigation to
+            enhance the usability and aesthetics of the Chicago Pet Rescue website while maintaining most of the
+            original site composition and content integrity. </p>
     </div>
 
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6">
+                <H4></H4>
+                <P></P>
+                <IMG SRC="">
+            </div>
+            <div class="col-lg-6">
+                <H4></H4>
+                <P></P>
+                <IMG SRC="">
+            </div>
+        </div>
 
+    </div>
 
 
     <div class="container">
