--- a/cpr-redesign.html
+++ b/cpr-redesign.html
@@ -31,7 +31,7 @@
         </header>
     </div>
 
-    <div class="container hero-container">
+    <div class="container">
         <h1 class="h1-homebio">Chicago Pet Rescue Website Redesign</h1>
         <div class="row">
             <div class="col-lg-8">
@@ -41,13 +41,11 @@
                 </p>
             </div>
         </div>
-        <div class="row">
-            <div class="col-lg-12">
-                
-                <img class="" src="images/cpr/hero-cpr-redesign.png">
-            </div>
-        </div>
     </div>
+    <div class="container">
+        <img class="" src="images/cpr/hero-cpr-redesign.png">
+    </div>
+
 
 
     <div class="container">
@@ -75,7 +73,8 @@
 
     <div class="container center-p">
         <h4>OVERVIEW</h4>
-        <p class="center-p">With so many animals in need of care and resources, and people looking for company and connection, often
+        <p class="center-p">With so many animals in need of care and resources, and people looking for company and
+            connection, often
             animal lovers feel more motivated to adopt a pet instead of purchasing one. When navigating a pet rescue
             webiste, in order to feel motivated to engage in the adoption process, the user needs to have trust in the
             organization and feel comfortable and satisfied with the amount of information they find. We identified a
@@ -84,7 +83,8 @@
             that provides value to all parties involved.</p>
 
         <h4>THE PROBLEM</h4>
-        <p class="center-p">The Chicago Pet Rescue webiste was cluttered and in need of updating. The site needed to focus on adoption as
+        <p class="center-p">The Chicago Pet Rescue webiste was cluttered and in need of updating. The site needed to
+            focus on adoption as
             their main goal and encourage more foot traffic.</p>
         <img class="old" src="images/cpr/old-web-design.png">
     </div>
@@ -104,7 +104,8 @@
 
     <div class="container center-p">
         <h4>THE SOLUTION</h4>
-        <p class="center-p">To create a streamlined and visually appealing site that clearly explains the adoption process and is easier
+        <p class="center-p">To create a streamlined and visually appealing site that clearly explains the adoption
+            process and is easier
             to navigate. Apply modern UI elements, simplify the application form, and re-organize the navigation to
             enhance the usability and aesthetics of the Chicago Pet Rescue website while maintaining most of the
             original site composition and content integrity. </p>
@@ -114,16 +115,22 @@
         <div class="row">
             <div class="col-lg-6">
                 <H4>Project scope & Timeline</H4>
-                <P>Time was a big constraint as the project needed to move fast. The team created a clear project scope and timeline at the outset of the project to ensure the efficient and effective investment our time and effort. </P>
+                <P>Time was a big constraint as the project needed to move fast. The team created a clear project scope
+                    and timeline at the outset of the project to ensure the efficient and effective investment our time
+                    and effort. </P>
                 <IMG class="cs-img" SRC="images/cpr/project-timeline.png">
             </div>
             <div class="col-lg-6">
                 <H4>Research Plan</H4>
-                <P>The research plan served as a base to set expectations and clear communication. We outlined the research objectives, goals, methods, and logistical needed for the case study.</P>
-                <IMG SRC="images/cpr/">
+                <P>The research plan served as a base to set expectations and clear communication. We outlined the
+                    research objectives, goals, methods, and logistical needed for the case study.</P>
+                <IMG class="cs-img"  SRC="images/cpr/research-plan.png">
             </div>
         </div>
+    </div>
 
+    <div class="container-fluid div-bar">
+        <img class="number-ux-phase" src="images/Empathize-01.png"><h4>Empathizing with the User</h4>
     </div>
 
 
